--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,45 @@
 @import "./sass/sections/contact";
 @import "./sass/sections/hero";
 @import "./sass/sections/projects";
+
+$color_1: #402d2d;
+$font-family_1: Baskerville, serif;
+$background-color_1: #402d2d;
+
+.ml5 {
+	position: relative;
+	font-weight: 300;
+	font-size: 4.5em;
+	color: $color_1;
+	.text-wrapper {
+		position: relative;
+		display: inline-block;
+		padding-top: 0.1em;
+		padding-right: 0.05em;
+		padding-bottom: 0.15em;
+		line-height: 1em;
+	}
+	.line {
+		position: absolute;
+		left: 0;
+		top: 0;
+		bottom: 0;
+		margin: auto;
+		height: 3px;
+		width: 100%;
+		background-color: $background-color_1;
+		transform-origin: 0.5 0;
+	}
+	.ampersand {
+		font-family: $font-family_1;
+		font-style: italic;
+		font-weight: 400;
+		width: 1em;
+		margin-right: -0.1em;
+		margin-left: -0.1em;
+	}
+	.letters {
+		display: inline-block;
+		opacity: 0;
+	}
+}
