--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -15,6 +15,7 @@
   right: 0;
   z-index: -1;
 
+
   // Set position sticky so the jumbotron stays fixed while you scroll.
   // position: sticky;
 
@@ -33,6 +34,7 @@
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
+    display: inline-block;
 
     @include respond(tab-land) {
       font-size: 4rem;
