tweaked the positioning

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,8 @@ $background-color_1: #402d2d;
 	font-weight: 600;
 	font-size: 4.5em;
 	color: $color_1;
+	margin-left: 32px;
+	margin-bottom: 22px;
 	.text-wrapper {
 		position: relative;
 		display: inline-block;
