--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  background: #e3ccd4c9;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
@@ -34,7 +34,7 @@
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
-    display: inline-block;
+    // display: inline-block;
 
     @include respond(tab-land) {
       font-size: 4rem;
